--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,9 @@
 </head>
 
 <body>
+    <img id="chartlet" src="./chartlet.png" hidden />
     <canvas id="view"></canvas>
     <script>
+
     </script>
 </body>
