改成相对寻址

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <head>
-    <script src='./tool.js'></script>
-    <script src='./SnakeCore.js'></script>
-    <script src='./SnakeGame.js'></script>
+    <script src='tool.js'></script>
+    <script src='SnakeCore.js'></script>
+    <script src='SnakeGame.js'></script>
 </head>
 
 <body>
@@ -451,6 +451,6 @@
 
         chartlet = new Image();
         chartlet.onload = loadGame;
-        chartlet.src = './chartlet.png';
+        chartlet.src = 'chartlet.png';
     </script>
 </body>
